[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-raiders-mcp"
version = "0.1.0"
description = "MCP server for Arc Raiders game data"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
arc-raiders-mcp = "arc_raiders_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["arc_raiders_mcp"]
